--- a/equalizer-landing-page/index.html
+++ b/equalizer-landing-page/index.html
@@ -1,33 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Equalizer landing page</title>
-</head>
-<body>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/favicon-32x32.png"
+    />
 
-  We make your music sound extraordinary.
-
-  A system audio equalizer specifically designed for Android and iOS. Freely tune the 
-  way your music sounds with a professional grade parametric EQ & volume mixer. Control 
-  bass, mids, treble, gain control, reverb, and more!
-
-  Premium EQ
-
-  Get expert-level control with a robust equalizer, volume mixer, and spatial audio. Take 
-  your listening experience to a whole new level and access all our incredible features!
-
-  $4 / month
-
-  iOS Download
-  Android Download
-
-  All rights reserved © Equalizer 2021
-  Have any problems? Contact us via social media or email us at equalizer@example.com
-
-</body>
+    <title>Frontend Mentor | Equalizer landing page</title>
+  </head>
+  <body>
+    <div class="wrapper">
+      <header><img class="logo" src="./assets/logo.svg" alt="" /></header>
+      <section class="hero">
+        <h1>We make your music sound extraordinary.</h1>
+        <p>
+          A system audio equalizer specifically designed for Android and iOS.
+          Freely tune the way your music sounds with a professional grade
+          parametric EQ & volume mixer. Control bass, mids, treble, gain
+          control, reverb, and more!
+        </p>
+      </section>
+      <section class="cta">
+        <h2>Premium EQ</h2>
+        <p>
+          Get expert-level control with a robust equalizer, volume mixer, and
+          spatial audio. Take your listening experience to a whole new level and
+          access all our incredible features!
+        </p>
+        <p><span class="price">$4</span> / month</p>
+        <button>iOS Download</button> <button>Android Download</button>
+      </section>
+      <footer>
+        <img class="logo" src="./assets/logo.svg" alt="" />
+        All rights reserved © Equalizer 2021 Have any problems? Contact us via
+        social media or email us at equalizer@example.com
+      </footer>
+    </div>
+  </body>
 </html>
