Add css link and button style

--- a/equalizer-landing-page/index.html
+++ b/equalizer-landing-page/index.html
@@ -10,7 +10,7 @@
       sizes="32x32"
       href="./assets/favicon-32x32.png"
     />
-
+    <link rel="stylesheet" href="style.css" />
     <title>Frontend Mentor | Equalizer landing page</title>
   </head>
   <body>
@@ -33,7 +33,8 @@
           access all our incredible features!
         </p>
         <p><span class="price">$4</span> / month</p>
-        <button>iOS Download</button> <button>Android Download</button>
+        <button class="btn btn-dark">iOS Download</button>
+        <button class="btn btn-light">Android Download</button>
       </section>
       <footer>
         <img class="logo" src="./assets/logo.svg" alt="" />
