--- a/equalizer-landing-page/index.html
+++ b/equalizer-landing-page/index.html
@@ -18,7 +18,7 @@
       <header><img class="logo" src="./assets/logo.svg" alt="" /></header>
       <section class="hero">
         <h1>We make your music sound extraordinary.</h1>
-        <p>
+        <p class="tight">
           A system audio equalizer specifically designed for Android and iOS.
           Freely tune the way your music sounds with a professional grade
           parametric EQ & volume mixer. Control bass, mids, treble, gain
@@ -27,7 +27,7 @@
       </section>
       <section class="cta">
         <h2>Premium EQ</h2>
-        <p>
+        <p class="loose">
           Get expert-level control with a robust equalizer, volume mixer, and
           spatial audio. Take your listening experience to a whole new level and
           access all our incredible features!
@@ -38,8 +38,11 @@
       </section>
       <footer>
         <img class="logo" src="./assets/logo.svg" alt="" />
-        All rights reserved © Equalizer 2021 Have any problems? Contact us via
-        social media or email us at equalizer@example.com
+        <p class="tight">
+          All rights reserved © Equalizer 2021 Have any problems? Contact us via
+          social media or email us at
+        </p>
+        equalizer@example.com
       </footer>
     </div>
   </body>
