--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -26,13 +26,15 @@
     </style>
   </head>
   <body>
-    <div class="card">
-      <img src="images/image-qr-code.png" alt="" />
-      <p class="bold">Improve your front-end skills by building projects</p>
-      <p>
-        Scan the QR code to visit Frontend Mentor and take your coding skills to
-        the next level
-      </p>
+    <div class="wrapper">
+      <div class="card">
+        <img src="images/image-qr-code.png" alt="" />
+        <p class="bold">Improve your front-end skills by building projects</p>
+        <p>
+          Scan the QR code to visit Frontend Mentor and take your coding skills
+          to the next level
+        </p>
+      </div>
     </div>
 
     <div class="attribution">
