Add cta images and style

--- a/equalizer-landing-page/index.html
+++ b/equalizer-landing-page/index.html
@@ -25,16 +25,23 @@
           control, reverb, and more!
         </p>
       </section>
-      <section class="cta">
-        <h2>Premium EQ</h2>
-        <p class="loose">
-          Get expert-level control with a robust equalizer, volume mixer, and
-          spatial audio. Take your listening experience to a whole new level and
-          access all our incredible features!
-        </p>
-        <p><span class="price">$4</span> / month</p>
-        <button class="btn btn-dark">iOS Download</button>
-        <button class="btn btn-light">Android Download</button>
+      <section class="cta-cards">
+        <img
+          class="img-card"
+          src="/assets/illustration-app.png"
+          alt="Equalizer appdisplayed on phone"
+        />
+        <div class="price-card">
+          <h2>Premium EQ</h2>
+          <p class="loose">
+            Get expert-level control with a robust equalizer, volume mixer, and
+            spatial audio. Take your listening experience to a whole new level
+            and access all our incredible features!
+          </p>
+          <p><span class="price">$4</span> / month</p>
+          <button class="btn btn-dark">iOS Download</button>
+          <button class="btn btn-light">Android Download</button>
+        </div>
       </section>
       <footer>
         <img class="logo" src="./assets/logo.svg" alt="" />
