Fix image sources

--- a/equalizer-landing-page/index.html
+++ b/equalizer-landing-page/index.html
@@ -28,7 +28,7 @@
       <section class="cta-cards">
         <img
           class="img-card"
-          src="/assets/illustration-app.png"
+          src="assets/illustration-app.png"
           alt="Equalizer appdisplayed on phone"
         />
         <div class="price-card">
