--- a/equalizer-landing-page/index.html
+++ b/equalizer-landing-page/index.html
@@ -39,8 +39,12 @@
             and access all our incredible features!
           </p>
           <p><span class="price">$4</span> / month</p>
-          <button class="btn btn-dark">iOS Download</button>
-          <button class="btn btn-light">Android Download</button>
+          <a class="btn btn-dark" href="#">
+            <img src="./assets/icon-apple.svg" alt="" />iOS Download
+          </a>
+          <a class="btn btn-light" href="#">
+            <img src="./assets/icon-android.svg" alt="" />Android Download
+          </a>
         </div>
       </section>
       <footer>
