--- a/equalizer-landing-page/index.html
+++ b/equalizer-landing-page/index.html
@@ -52,8 +52,13 @@
         <p class="tight">
           All rights reserved © Equalizer 2021 Have any problems? Contact us via
           social media or email us at
+          <a href="mailto:equalizer@example.com">equalizer@example.com</a>
         </p>
-        equalizer@example.com
+        <div class="socials">
+          <a href="#"><img src="./assets/icon-facebook.svg" /></a
+          ><a href="#"><img src="./assets/icon-instagram.svg" /></a
+          ><a href="#"><img src="./assets/icon-twitter.svg" /></a>
+        </div>
       </footer>
     </div>
   </body>
