Finalize price card style

--- a/equalizer-landing-page/index.html
+++ b/equalizer-landing-page/index.html
@@ -38,7 +38,7 @@
             spatial audio. Take your listening experience to a whole new level
             and access all our incredible features!
           </p>
-          <p><span class="price">$4</span> / month</p>
+          <p class="price"><span>$4</span> / month</p>
           <a class="btn btn-dark" href="#">
             <img src="./assets/icon-apple.svg" alt="" />iOS Download
           </a>
