--- a/skilled-learning-landing-page/index.html
+++ b/skilled-learning-landing-page/index.html
@@ -1,52 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Skilled e-learning landing page</title>
-</head>
-<body>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/favicon-32x32.png"
+    />
 
-  Get Started
+    <title>Frontend Mentor | Skilled e-learning landing page</title>
+  </head>
+  <body>
+    <header>
+      <img src="assets/logo-dark.svg" alt="" /><a href="#" class="btn"
+        >Get Started</a
+      >
+    </header>
 
-  Maximize skill, minimize budget
+    <h1>Maximize skill, minimize budget</h1>
 
-  Our modern courses across a range of in-demand skills will give you the 
-  knowledge you need to live the life you want.
+    <div class="hero--card">
+      <p class="body--small">
+        Our modern courses across a range of in-demand skills will give you the
+        knowledge you need to live the life you want.
+      </p>
+      <a href="" class="btn btn--grad-1"> Get Started </a>
+    </div>
+    <img
+      class="hero--image"
+      src="assets/image-hero-mobile.png"
+      alt="Girl whistling at coffee cup"
+    />
+    <section class="cards">
+      <div class="card gradient-1">Check out our most popular courses!</div>
 
-  Get Started
+      <div class="card">
+        <h4>Animation</h4>
+        <p class="body--small">
+          Learn the latest animation techniques to create stunning motion design
+          and captivate your audience.
+        </p>
+        <a href="">Get Started</a>
+      </div>
 
-  Check out our most popular courses!
+      <div class="card">
+        <h4>Design</h4>
+        <p class="body--small">
+          Create beautiful, usable interfaces to help shape the future of how
+          the web looks.
+        </p>
+        <a href="">Get Started</a>
+      </div>
 
-  Animation
-  Learn the latest animation techniques to create stunning motion 
-  design and captivate your audience.
-  Get Started
+      <div class="card">
+        <h4>Photography</h4>
+        <p class="body--small">
+          Explore critical fundamentals like lighting, composition, and focus to
+          capture exceptional photos.
+        </p>
+        <a href="">Get Started</a>
+      </div>
 
-  Design
-  Create beautiful, usable interfaces to help shape the future of 
-  how the web looks.
-  Get Started
+      <div class="card">
+        <h4>Crypto</h4>
+        <p class="body--small">
+          All you need to know to get started investing in crypto. Go from
+          beginner to advanced with this 54 hour course.
+        </p>
+        <a href="">Get Started</a>
+      </div>
 
-  Photography
-  Explore critical fundamentals like lighting, composition, and focus 
-  to capture exceptional photos.
-  Get Started
+      <div class="card">
+        <h4>Business</h4>
+        A step-by-step playbook to help you start, scale, and sustain your
+        business without outside investment.
+        <a href="">Get Started</a>
+      </div>
+    </section>
 
-  Crypto
-  All you need to know to get started investing in crypto. Go from beginner 
-  to advanced with this 54 hour course.
-  Get Started
-
-  Business
-  A step-by-step playbook to help you start, scale, and sustain your business 
-  without outside investment.
-  Get Started
-
-  Get Started
-
-</body>
+    <footer>
+      <img src="assets/logo-light.svg" alt="" /><a
+        href=""
+        class="btn gradient-2"
+        >Get Started</a
+      >
+    </footer>
+  </body>
 </html>
