Change gradient class on hero card

--- a/skilled-learning-landing-page/index.html
+++ b/skilled-learning-landing-page/index.html
@@ -28,7 +28,7 @@
         Our modern courses across a range of in-demand skills will give you the
         knowledge you need to live the life you want.
       </p>
-      <a href="" class="btn btn--grad-1"> Get Started </a>
+      <a href="" class="btn gradient-1"> Get Started </a>
     </div>
     <img
       class="hero--image"
