Add card icon images

--- a/skilled-learning-landing-page/index.html
+++ b/skilled-learning-landing-page/index.html
@@ -39,6 +39,7 @@
       <div class="card gradient-1">Check out our most popular courses!</div>
 
       <div class="card">
+        <img src="assets/icon-animation.svg" alt="" />
         <h4>Animation</h4>
         <p class="body--small">
           Learn the latest animation techniques to create stunning motion design
@@ -48,6 +49,7 @@
       </div>
 
       <div class="card">
+        <img src="assets/icon-design.svg" alt="" />
         <h4>Design</h4>
         <p class="body--small">
           Create beautiful, usable interfaces to help shape the future of how
@@ -57,6 +59,7 @@
       </div>
 
       <div class="card">
+        <img src="assets/icon-photography.svg" alt="" />
         <h4>Photography</h4>
         <p class="body--small">
           Explore critical fundamentals like lighting, composition, and focus to
@@ -66,6 +69,7 @@
       </div>
 
       <div class="card">
+        <img src="assets/icon-crypto.svg" alt="" />
         <h4>Crypto</h4>
         <p class="body--small">
           All you need to know to get started investing in crypto. Go from
@@ -75,6 +79,7 @@
       </div>
 
       <div class="card">
+        <img src="assets/icon-business.svg" alt="" />
         <h4>Business</h4>
         A step-by-step playbook to help you start, scale, and sustain your
         business without outside investment.
