--- a/skilled-learning-landing-page/index.html
+++ b/skilled-learning-landing-page/index.html
@@ -81,8 +81,10 @@
       <div class="card">
         <img src="assets/icon-business.svg" alt="" />
         <h4>Business</h4>
-        A step-by-step playbook to help you start, scale, and sustain your
-        business without outside investment.
+        <p class="body--small">
+          A step-by-step playbook to help you start, scale, and sustain your
+          business without outside investment.
+        </p>
         <a href="">Get Started</a>
       </div>
     </section>
