--- a/skilled-learning-landing-page/index.html
+++ b/skilled-learning-landing-page/index.html
@@ -21,9 +21,8 @@
       >
     </header>
 
-    <h1>Maximize skill, minimize budget</h1>
-
     <div class="hero--card">
+      <h1>Maximize skill, minimize budget</h1>
       <p class="body--small">
         Our modern courses across a range of in-demand skills will give you the
         knowledge you need to live the life you want.
@@ -36,7 +35,9 @@
       alt="Girl whistling at coffee cup"
     />
     <section class="cards">
-      <div class="card gradient-1">Check out our most popular courses!</div>
+      <div class="card gradient-1">
+        <h3>Check out our most popular courses!</h3>
+      </div>
 
       <div class="card">
         <img src="assets/icon-animation.svg" alt="" />
