Begin tablet and desktop responsive

--- a/skilled-learning-landing-page/index.html
+++ b/skilled-learning-landing-page/index.html
@@ -20,20 +20,31 @@
         >Get Started</a
       >
     </header>
-
-    <div class="hero--card">
-      <h1>Maximize skill, minimize budget</h1>
-      <p class="body--small">
-        Our modern courses across a range of in-demand skills will give you the
-        knowledge you need to live the life you want.
-      </p>
-      <a href="" class="btn gradient-1"> Get Started </a>
-    </div>
-    <img
-      class="hero--image"
-      src="assets/image-hero-mobile.png"
-      alt="Girl whistling at coffee cup"
-    />
+    <section class="hero-card">
+      <div class="hero-card--text">
+        <h1>Maximize skill, minimize budget</h1>
+        <p class="body--small">
+          Our modern courses across a range of in-demand skills will give you
+          the knowledge you need to live the life you want.
+        </p>
+        <a href="" class="btn gradient-1"> Get Started </a>
+      </div>
+      <img
+        class="hero-card--image-mobile"
+        src="assets/image-hero-mobile.png"
+        alt="Girl whistling at coffee cup"
+      />
+      <img
+        class="hero-card--image-tablet"
+        src="assets/image-hero-tablet.png"
+        alt="Girl whistling at coffee cup"
+      />
+      <img
+        class="hero-card--image-desktop"
+        src="assets/image-hero-desktop.png"
+        alt="Girl whistling at coffee cup"
+      />
+    </section>
     <section class="cards">
       <div class="card gradient-1">
         <h3>Check out our most popular courses!</h3>
